--- a/index.html
+++ b/index.html
@@ -595,19 +595,22 @@ color:black'>(2)<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nb
         html2pdf().set(opt).from(element).save();
       };
 
-      function cleanHtmlForDocx(html) {
-        // This is a more targeted cleaning function.
-        // It removes MSO (Microsoft Office) specific classes which can cause issues,
-        // but preserves the inline styles that define the layout.
-        let cleanHtml = html.replace(/ class=MsoNormal/g, '');
-        // Also remove language attributes which can be problematic
-        cleanHtml = cleanHtml.replace(/ lang=EN-IN/g, '');
-        return cleanHtml;
+      function D(html) {
+        const w = document.createElement('div');
+        w.innerHTML = html;
+
+        w.querySelectorAll('*').forEach(el => {
+            // This is a more targeted removal. We only remove the attributes that cause issues.
+            el.removeAttribute('class');
+            el.removeAttribute('lang');
+        });
+
+        return w.innerHTML;
       }
 
       window.downloadDOCX = function () {
         const element = document.getElementById("preview");
-        const cleanedHtml = cleanHtmlForDocx(element.innerHTML);
+        const cleanedHtml = D(element.innerHTML);
 
         const fullHtml = '<html><head><meta charset="utf-8"></head><body>' + cleanedHtml + '</body></html>';
 
