--- a/index.html
+++ b/index.html
@@ -418,10 +418,6 @@ witness.  </span></p>
 margin-left:.75pt'><span lang=EN-IN style='font-size:14.0pt;line-height:107%'> </span><span
 lang=EN-IN> </span></p>
 
-
-
-
-
 <p class=MsoNormal style='margin-bottom:6.25pt'>
 <img width=85 height=103 id="Group 3029" src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAFUAAABnAgMAAAAMKeZvAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8YQUAAAAMUExURQAAAAAAAAAAAAAAADXpN5YAAAAEdFJOU8//AO8TkFPOAAAACXBIWXMAAA7DAAAOwwHHb6hkAAAAK0lEQVRIx2MQDcUCGBiyVmEBDqPCo8KjwqPCo8KjwqPCo8IjSvgqtpbSAQB2SI+4JzxktAAAAABJRU5ErkJggg==" align=left hspace=12>
 <span lang=EN-IN>        
@@ -429,13 +425,6 @@ lang=EN-IN> </span></p>
 </span>
 <span lang=EN-IN>                                                 </span>
 </p>
-
-
-
-
-
-
-
 
 <p class=MsoNormal style='margin-top:0in;margin-right:0in;margin-bottom:0in;
 margin-left:.75pt'><span lang=EN-IN style='font-size:14.0pt;line-height:107%'> </span><span
@@ -523,43 +512,8 @@ color:black'>(2)<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nb
 <p class=MsoNormal><span lang=EN-IN>&nbsp;</span></p>
 
 </div>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
                     
 `;
-
-
-
-
-
-
 
       function fillTemplate(data) {
         let html = template;
@@ -595,26 +549,13 @@ color:black'>(2)<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nb
         html2pdf().set(opt).from(element).save();
       };
 
-      function D(html) {
-        const w = document.createElement('div');
-        w.innerHTML = html;
-
-        w.querySelectorAll('*').forEach(el => {
-            // This is a more targeted removal. We only remove the attributes that cause issues.
-            el.removeAttribute('class');
-            el.removeAttribute('lang');
-        });
-
-        return w.innerHTML;
-      }
-
       window.downloadDOCX = function () {
         const element = document.getElementById("preview");
-        const cleanedHtml = D(element.innerHTML);
-
-        const fullHtml = '<html><head><meta charset="utf-8"></head><body>' + cleanedHtml + '</body></html>';
-
-        const converted = window.htmlDocx.asBlob(fullHtml);
+        const html =
+          '<html><head><meta charset="utf-8"></head><body>' +
+          element.innerHTML +
+          "</body></html>";
+        const converted = window.htmlDocx.asBlob(html);
         const link = document.createElement("a");
         link.href = URL.createObjectURL(converted);
         link.download = "RentAgreement.docx";
