--- a/index.html
+++ b/index.html
@@ -974,6 +974,7 @@ lang=EN-IN> </span></p>
         link.click();
       };
     </script>
+    <script defer src="https://vercel.com/analytics/script.js"></script>
     <datalist id="occupation-suggestions">
       <option value="Job"></option>
       <option value="Business"></option>
